[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/dialog/create_or_edit_list_item.gd" type="Script" id=1]
[ext_resource path="res://ui/theme_resource/panel_dialog.tres" type="StyleBox" id=2]


[node name="DialogCreateOrEditListItem" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="CC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_lock_": true
}

[node name="MainPanelPC" type="PanelContainer" parent="CC"]
margin_left = 379.0
margin_top = 179.0
margin_right = 645.0
margin_bottom = 421.0
custom_styles/panel = ExtResource( 2 )

[node name="VC" type="VBoxContainer" parent="CC/MainPanelPC"]
margin_left = 8.0
margin_top = 8.0
margin_right = 258.0
margin_bottom = 234.0
custom_constants/separation = 12

[node name="LabelDesc" type="Label" parent="CC/MainPanelPC/VC"]
margin_right = 250.0
margin_bottom = 14.0
text = "Add/Edit dialog"
align = 1

[node name="ItemTextVC" type="VBoxContainer" parent="CC/MainPanelPC/VC"]
margin_top = 26.0
margin_right = 250.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="CC/MainPanelPC/VC/ItemTextVC"]
margin_right = 250.0
margin_bottom = 14.0
text = "Item text"

[node name="TextEdit" type="TextEdit" parent="CC/MainPanelPC/VC/ItemTextVC"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 118.0
rect_min_size = Vector2( 250, 100 )

[node name="TagsVC" type="VBoxContainer" parent="CC/MainPanelPC/VC"]
margin_top = 156.0
margin_right = 250.0
margin_bottom = 194.0

[node name="Label" type="Label" parent="CC/MainPanelPC/VC/TagsVC"]
margin_right = 250.0
margin_bottom = 14.0
text = "Tags"

[node name="HC" type="HBoxContainer" parent="CC/MainPanelPC/VC/TagsVC"]
margin_top = 18.0
margin_right = 250.0
margin_bottom = 38.0

[node name="TagHC" type="HBoxContainer" parent="CC/MainPanelPC/VC/TagsVC/HC"]
visible = false
margin_bottom = 20.0

[node name="ButtonAddTags" type="Button" parent="CC/MainPanelPC/VC/TagsVC/HC"]
margin_right = 20.0
margin_bottom = 20.0
size_flags_horizontal = 0
text = "+"

[node name="ButtonHC" type="HBoxContainer" parent="CC/MainPanelPC/VC"]
margin_top = 206.0
margin_right = 250.0
margin_bottom = 226.0
alignment = 1

[node name="ButtonApply" type="Button" parent="CC/MainPanelPC/VC/ButtonHC"]
margin_left = 55.0
margin_right = 137.0
margin_bottom = 20.0
disabled = true
text = "Create/Edit"

[node name="ButtonCancel" type="Button" parent="CC/MainPanelPC/VC/ButtonHC"]
margin_left = 141.0
margin_right = 195.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="text_changed" from="CC/MainPanelPC/VC/ItemTextVC/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="CC/MainPanelPC/VC/TagsVC/HC/ButtonAddTags" to="." method="_on_ButtonAddTags_pressed"]
[connection signal="pressed" from="CC/MainPanelPC/VC/ButtonHC/ButtonApply" to="." method="_on_ButtonCreate_pressed"]
[connection signal="pressed" from="CC/MainPanelPC/VC/ButtonHC/ButtonCancel" to="." method="_on_ButtonCancel_pressed"]
